Closed Bug 386561 Opened 18 years ago Closed 18 years ago

Page not painting properly

Categories

(Core :: DOM: Editor, defect)

x86
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: smaug, Assigned: smaug)

References

()

Details

(Keywords: verified1.8.0.13, verified1.8.1.5)

Attachments

(2 files)

See the url, you need to download the testcase to your computer, because of enhanced privileges.
See bug 376426 for a similar problem, but different testcase.
In 1.8 branch bug 386354 this is listed as a regression, but that bug has not been checked in yet. Is it a regression from bug 373586 on trunk? Is it likely to be a stop-ship issue? If so please nominate for blocking1.9 Is it the same as bug 376426 (which was filed after bug 373586 was fixed)?
My *guess* is that this is not a regression but something which can be seen now because bug 373586 (which fixes bug 386254 too) is fixed. The patch for bug 386254 doesn't really change functionality, well, ok editor may stay alive a bit longer.
Assignee: nobody → Olli.Pettay
Attached patch proposed patchSplinter Review
Make sure that viewmanager's EndUpdateViewBatch gets called. There is anyway null checks for selection, so better to not return too early.
Attachment #270791 - Flags: superreview?(peterv)
Attachment #270791 - Flags: review?(peterv)
The same patch works fine both in trunk and branches.
Status: NEW → ASSIGNED
Component: Layout → Editor
Because of bug 386254 adding blocking? flags.
Flags: blocking1.8.1.5?
Flags: blocking1.8.0.13?
Comment on attachment 270791 [details] [diff] [review] proposed patch Does it even make sense to warn?
Attachment #270791 - Flags: superreview?(peterv)
Attachment #270791 - Flags: superreview+
Attachment #270791 - Flags: review?(peterv)
Attachment #270791 - Flags: review+
Maybe not. That was more for my debugging.
Unfortunately this is not the same problem as bug 376426.
Comment on attachment 270926 [details] [diff] [review] without the warning Checked in to trunk.
Attachment #270926 - Flags: approval1.8.1.5?
Attachment #270926 - Flags: approval1.8.0.13?
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: blocking1.8.1.5?
Flags: blocking1.8.1.5+
Flags: blocking1.8.0.13?
Flags: blocking1.8.0.13+
Comment on attachment 270926 [details] [diff] [review] without the warning approved for 1.8.1.5 and 1.8.0.13, a=dveditz for release-drivers
Attachment #270926 - Flags: approval1.8.1.5?
Attachment #270926 - Flags: approval1.8.1.5+
Attachment #270926 - Flags: approval1.8.0.13?
Attachment #270926 - Flags: approval1.8.0.13+
Verified fixed, using: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.5pre) Gecko/20070709 BonEcho/2.0.0.5pre Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.13pre) Gecko/20070710 Firefox/1.5.0.13pre The page is still painting properly after clicking on the button. (I had to test the testcase in a chrome:// url, btw). It doesn't even crash anymore ;)
Status: RESOLVED → VERIFIED
Also verified with current trunk build.
Flags: in-testsuite?
Depends on: 411896
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: