bug 386561, Page not painting properly (ensure that EndUpdateViewBatch gets called), r+sr=peterv